--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
     var constraints = {
         video: {
-            facingMode: ['user', 'environment'],
+            facingMode: ['environment'],
             height: {ideal: 1080},
             width: {ideal: 1920},
         }, audio: false
