force rear camera

--- a/index.html
+++ b/index.html
@@ -63,9 +63,12 @@
 
 
     var constraints = {
-        video: {
-            facingMode: {exact: "environmen"}
-        }, audio: false
+        "video": {
+            "height": {"ideal": 1080},
+            "width": {"ideal": 1920},
+            "facingMode": { "exact": "environmen"}
+
+        }, "audio": false
     };
 
     function initialize() {
